@@ -3,10 +3,13 @@ package com.rookies3.myspringbootlab.service;
 import com.rookies3.myspringbootlab.controller.dto.BookDTO;
 import com.rookies3.myspringbootlab.entity.Book;
 import com.rookies3.myspringbootlab.entity.BookDetail;
-import com.rookies3.myspringbootlab.exception.ResourceNotFoundException;
+import com.rookies3.myspringbootlab.exception.BusinessException;
+import com.rookies3.myspringbootlab.exception.ErrorCode;
 import com.rookies3.myspringbootlab.repository.BookDetailRepository;
 import com.rookies3.myspringbootlab.repository.BookRepository;
+
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -15,50 +18,53 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class BookService {
 
     private final BookRepository bookRepository;
     private final BookDetailRepository bookDetailRepository;
 
-    // 모든 책 조회
-    @Transactional(readOnly = true)
     public List<BookDTO.Response> getAllBooks() {
-        return bookRepository.findAll().stream()
+        return bookRepository.findAll()
+                .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ID로 책 조회
-    @Transactional(readOnly = true)
     public BookDTO.Response getBookById(Long id) {
         Book book = bookRepository.findByIdWithBookDetail(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Book not found with id: " + id));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
         return BookDTO.Response.fromEntity(book);
     }
 
-    // ISBN으로 책 조회
-    @Transactional(readOnly = true)
     public BookDTO.Response getBookByIsbn(String isbn) {
         Book book = bookRepository.findByIsbnWithBookDetail(isbn)
-                .orElseThrow(() -> new ResourceNotFoundException("Book not found with ISBN: " + isbn));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "ISBN", isbn));
         return BookDTO.Response.fromEntity(book);
     }
 
-    // 저자로 책 검색
-    @Transactional(readOnly = true)
-    public List<BookDTO.Response> searchBooksByAuthor(String author) {
-        return bookRepository.findByAuthorContainingIgnoreCase(author).stream()
+    public List<BookDTO.Response> getBooksByAuthor(String author) {
+        return bookRepository.findByAuthorContainingIgnoreCase(author)
+                .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // 책 생성
+    public List<BookDTO.Response> getBooksByTitle(String title) {
+        return bookRepository.findByTitleContainingIgnoreCase(title)
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .toList();
+    }
+
     @Transactional
     public BookDTO.Response createBook(BookDTO.Request request) {
+        // Validate ISBN is not already in use
         if (bookRepository.existsByIsbn(request.getIsbn())) {
-            throw new IllegalArgumentException("ISBN already exists: " + request.getIsbn());
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
 
+        // Create book entity
         Book book = Book.builder()
                 .title(request.getTitle())
                 .author(request.getAuthor())
@@ -67,6 +73,7 @@ public class BookService {
                 .publishDate(request.getPublishDate())
                 .build();
 
+        // Create book detail if provided
         if (request.getDetailRequest() != null) {
             BookDetail bookDetail = BookDetail.builder()
                     .description(request.getDetailRequest().getDescription())
@@ -75,59 +82,67 @@ public class BookService {
                     .publisher(request.getDetailRequest().getPublisher())
                     .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
                     .edition(request.getDetailRequest().getEdition())
+                    //연관관계 저장
                     .book(book)
                     .build();
-
+            //연관관계 저장
             book.setBookDetail(bookDetail);
         }
 
+        // Save and return the book
         Book savedBook = bookRepository.save(book);
         return BookDTO.Response.fromEntity(savedBook);
     }
 
-    // 책 수정
     @Transactional
     public BookDTO.Response updateBook(Long id, BookDTO.Request request) {
-        Book book = bookRepository.findByIdWithBookDetail(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Book not found with id: " + id));
+        // Find the book
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
 
+        // Check if another book already has the ISBN
+        if (!book.getIsbn().equals(request.getIsbn()) &&
+                bookRepository.existsByIsbn(request.getIsbn())) {
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
+        }
+
+        // Update book basic info
         book.setTitle(request.getTitle());
         book.setAuthor(request.getAuthor());
+        book.setIsbn(request.getIsbn());
         book.setPrice(request.getPrice());
         book.setPublishDate(request.getPublishDate());
 
+        // Update book detail if provided
         if (request.getDetailRequest() != null) {
             BookDetail bookDetail = book.getBookDetail();
+
+            // Create new detail if not exists
             if (bookDetail == null) {
                 bookDetail = new BookDetail();
                 bookDetail.setBook(book);
+                book.setBookDetail(bookDetail);
             }
 
+            // Update detail fields
             bookDetail.setDescription(request.getDetailRequest().getDescription());
             bookDetail.setLanguage(request.getDetailRequest().getLanguage());
             bookDetail.setPageCount(request.getDetailRequest().getPageCount());
             bookDetail.setPublisher(request.getDetailRequest().getPublisher());
             bookDetail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
             bookDetail.setEdition(request.getDetailRequest().getEdition());
-
-            book.setBookDetail(bookDetail);
         }
 
+        // Save and return updated book
         Book updatedBook = bookRepository.save(book);
         return BookDTO.Response.fromEntity(updatedBook);
     }
 
-    // 책 삭제
     @Transactional
     public void deleteBook(Long id) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Book not found with id: " + id));
-        bookRepository.delete(book);
-    }
-
-    // ISBN 중복 검사
-    @Transactional(readOnly = true)
-    public boolean isIsbnExists(String isbn) {
-        return bookRepository.existsByIsbn(isbn);
+        if (!bookRepository.existsById(id)) {
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id);
+        }
+        bookRepository.deleteById(id);
     }
 }
